<resources>
    <string name="app_name">Message</string>
    <string name="avatar">Avatar</string>
    <string name="background">Background</string>
    <string name="enter_content">Enter Content</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="day">Day</string>
    <string name="cancel_add_friend">Cancel Add Friend</string>
    <string name="confirm">Confirm</string>
    <string name="address">Address</string>
    <string name="check">Check</string>
    <string name="check_and_add">Check And Add</string>
    <string name="enter_message">Enter Message</string>
    <string name="to">to</string>
    <string name="method_select_image">Method Select Image</string>
    <string name="choose_a_method">Choose a method</string>
    <string name="conversation_is_empty">Conversation Is Empty</string>
    <string name="enter_name_group">Enter Name Group</string>
    <string name="confirm_change_name_group">Confirm Change Name Group</string>
    <string name="please_stay">Please! Stay</string>
    <string name="have_not_sent_the_message_you_are_sure_you_want_to_exit">Have Not Sent The Message You Are Sure You Want To Exit !</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Delete Message</string>
    <string name="hide_on_your_side">Hide On Your Side</string>
    <string name="password_current">Password Current</string>
    <string name="verify_email">Verify Email</string>
    <string name="input_new_password">Input New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="keep_login">Keep Login</string>
    <string name="welcome_to">Welcome To</string>
    <string name="success">Success</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="add_friend">Add Friend</string>
    <string name="qr_code">Qr Code</string>
    <string name="create_qr_code">Create Qr Code</string>
    <string name="sms">SMS</string>
    <string name="library_music">Library Music</string>
    <string name="log_out">Log Out</string>
    <string name="phone">Phone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">Home</string>
    <string name="conversation">Conversation</string>
    <string name="setting">Setting</string>
    <string name="extensions">Extensions</string>
    <string name="image">Image</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="message_current">Message Current</string>
    <string name="denied">Denied</string>
    <string name="name_author">Name Author</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="body_text">Body Text</string>
    <string name="hash_tag">Hash Tag</string>
    <string name="react_time">React Time</string>
    <string name="create_post">Create Post</string>
    <string name="error">Error</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="content">Content</string>
    <string name="personal_page">Personal Page</string>
    <string name="select_image">Select Image</string>
    <string name="add_conversation">Add Conversation</string>
    <string name="create">Create</string>
    <string name="auto">Auto</string>
    <string name="continue_scan">Continue Scan</string>
    <string name="result">Result</string>
    <string name="complete">Complete</string>
    <string name="please_check_email_verify_email_continue_login">Please Check Email! Verify Email Continue Login</string>
    <string name="hide_message">Hide Message</string>
</resources>