<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/viewProfile"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/view_profile" />
            <item
                android:id="@+id/editProfile"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/edit_profile" />
            <item
                android:id="@+id/changePassword"
                android:icon="@drawable/ic_baseline_vpn_key_24"
                android:title="@string/change_password" />
            <item
                android:id="@+id/addFriend"
                android:icon="@drawable/ic_baseline_person_add_24"
                android:title="@string/add_friend" />
        </menu>
    </item>
    <item android:title="@string/qr_code">
        <menu>
            <item
                android:id="@+id/create_qr_code"
                android:icon="@drawable/ic_baseline_qr_code_24"
                android:title="@string/create_qr_code" />
            <item
                android:id="@+id/scan_qr_code"
                android:icon="@drawable/ic_baseline_qr_code_scanner_24"
                android:title="@string/scan_qr_code" />
        </menu>
    </item>
    <item android:title="@string/extensions">
        <menu>
            <item
                android:id="@+id/sms"
                android:icon="@drawable/ic_baseline_sms_24"
                android:title="@string/sms" />
            <item
                android:id="@+id/libraryMusic"
                android:icon="@drawable/ic_baseline_library_music_24"
                android:title="@string/library_music" />
        </menu>
    </item>
    <item android:title="Exit">
        <menu>
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>